# deepfake_detector

./: README.md  requirements.txt
code_octave/: numerical_analysis.ipynb
code_thomas/: README.md  analysis_report.json  environment.yml  pyproject.toml  requirements.txt
code_thomas/docs/: FINAL_ARCHITECTURE.md  REVIEW_GUIDE.md  SCIENTIFIC_REFERENCES.md  build_report.py  rapport_final_layout_fraud.md
code_thomas/examples/: sample_doc.json  sample_manifest.jsonl
code_thomas/notebooks/: document_fraud_layout_final.ipynb
code_thomas/scripts/: make_example_assets.py  run_analysis.py  run_benchmark.py
code_thomas/src/docfraud_layout/: __init__.py  calibration.py  candidate_signals.py  candidates.py  config.py  font_analysis.py  geometry.py  io.py  layout_alignment.py  layout_reference.py  multipage.py  pipeline.py  reference_data.py  reporting.py  schemas.py  scoring.py  visual_layout.py
code_thomas/src/docfraud_layout/datasets/: __init__.py  catalog.py
code_thomas/src/docfraud_layout/evaluation/: __init__.py  manifest.py  metrics.py
code_thomas/src/docfraud_layout_final.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code_thomas/tests/: test_pipeline.py
code_valentino/: extractor.ipynb  numerical_analysis.ipynb  numerical_analysis_bank_statement.ipynb  numerical_analysis_contract.ipynb
manual_extraction/: document_extraction.ipynb  document_extraction.py
metadata/: analyse_metadata.py  analyse_metadata_image.py  analyse_metadata_pdf.py  requirements.txt
numerical_analysis/: numerical_analysis.ipynb
verif_signature/: README.md  (+1 more)
(+19 files in other folders)
