[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfraud-layout-final"
version = "0.2.0"
description = "Readable layout-centric document fraud analysis project"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",
    "opencv-python>=4.9.0",
    "matplotlib>=3.8.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
